# damast

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  _config.yml  _toc.yml  environment.yml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: build-wheel.yml  gh-pages.yml  lint.yml  test-ratarmount.yml  test.yml
docs/: cli.rst  experiments.ipynb  modules.rst  pipeline_elements.ipynb  usage.ipynb  usage.rst
docs/examples/: damast-process-pipeline.py
docs/modules/: cli.rst  core.rst  data_handling.rst  domains.rst
docs/modules/domains/: maritime.rst
src/: conf.py
src/damast/: __init__.py  config.py  version.py
src/damast/cli/: __init__.py  base.py  data_annotate.py  data_converter.py  data_inspect.py  data_processing.py  experiment.py  main.py  plugins.py
src/damast/core/: __init__.py  annotations.py  constants.py  data_description.py  dataframe.py  dataprocessing.py  datarange.py  decorators.py  formatting.py  interface.py  metadata.py  pipeline.py  polars_dataframe.py  processing_graph.py  transformations.py  types.py  units.py  validation.py
src/damast/data_handling/: __init__.py  accessors.py  exploration.py  pipeline.py
src/damast/data_handling/transformers/: __init__.py  augmenters.py  base.py  cycle_transformer.py  features.py  filters.py  normalizers.py  sorters.py  visualisers.py
src/damast/domains/: __init__.py
src/damast/domains/maritime/: README.md  __init__.py  data_processing.py  data_specification.py  params.yaml
src/damast/domains/maritime/ais/: __init__.py  data_generator.py  navigational_status.py  vessel_types.py
src/damast/domains/maritime/math/: __init__.py  normalization.py  spatial.py  statistical.py
src/damast/domains/maritime/transformers/: __init__.py  augmenters.py  features.py
src/damast/domains/search/: README.md  api_token.sh  coopernicus.py  copernicus.py
src/damast/ml/: __init__.py  experiments.py  scheduler.py  worker.py
src/damast/ml/models/: base.py
src/damast/utils/: __init__.py  io.py
tests/damast/: conftest.py
tests/damast/cli/: test_cli.py
tests/damast/core/: test_annotations.py  test_dataframe.py  test_dataprocessing.py  test_dataprocessor.py  test_datarange.py  test_metadata.py  test_processing_graph.py  test_transformations.py
tests/damast/data/: barentswatch.spec.yaml  data.hdf5  osint.csv  test_ais.barentswatch.csv  test_ais.csv  test_ais.parquet  test_ais.spec.yaml  test_dataframe.csv  test_dataframe.hdf5  test_dataframe.spec.yaml  test_dataframe_with_quotes.csv  test_dataframe_with_quotes.spec.yaml
tests/damast/data/01_dataframe_composition/: data.csv  dataspec.yaml
tests/damast/data_handling/: test_accessors.py  test_data_processing.py  test_filters.py  test_pipeline.py  test_transformers.py
tests/damast/data_handling/transformers/: test_augmenters.py  test_features.py  test_filters.py  test_maritime_augmenters.py  test_normalizers.py  test_sorters.py
tests/damast/domains/maritime/: test_data_processing.py  test_data_specification.py
tests/damast/domains/maritime/ais/: test_augmenters.py  test_vessel_types.py
tests/damast/ml/: run_test_worker.py  test_experiments.py  test_scheduler.py  test_scheduler_worker.py
tests/damast/utils/: test_io.py
tests/examples/01-ais-ml/: ais_dataspec.yaml  ais_processing.py
tests/examples/03-ais-trajectory-prediction/: trp.py
