[build-system]
requires = ["setuptools >= 61.0.0",
    "wheel",
    "build",
    "sphinx"]

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "damast"
version = "0.1"
description = "Package to improve the development of transparent, replicable data processing pipelines"
#license = "BSD-3-Clause"
readme = "README.md"
keywords = ["data processing", "pipeline", "machine learning"]
authors = [
    { name = "Pierre Bernabé", email = "pierbernabe@simula.no" },
    { name = "Jørgen S. Dokken", email = "dokken@simula.no" },
    { name = "Anne Fouilloux", email = "annef@simula.no" },
    { name = "Thomas Roehr", email = "roehr@simula.no" }
]
requires-python = ">=3.10"

maintainers = [
    { name = "Jørgen S. Dokken", email = "dokken@simula.no" },
    { name = "Anne Fouilloux", email = "annef@simula.no" },
    { name = "Thomas Roehr", email = "roehr@simula.no" }
]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Lanugage :: Python :: 3.10",
]

dependencies = [
    "astropy",
    "matplotlib",
    "numba",
    "numpy",
    "vaex",
    "pyais",
    "scikit-learn",
    "tensorflow",
    "keras"
]

[project.urls]
homepage = "https://gitlab.com/simula-srl/damast"
documentation = "https://gitlab.com/simula-srl/damast"
repository = "https://gitlab.com/simula-srl/damast"

#[project.entry-points]

[project.optional-dependencies]
dev = [
    "tox",
    "flake8-gl-codeclimate",
    "jupyter-book",
    "isort",
    "sphinx-autoapi"
]
test = [
    "pytest",
    "coverage",
    "pytest-cov"
]

[project.scripts]
damast = "damast.cli.main:run"

[tool.mypy]
ignore_missing_imports = true

[tools.setuptools]
package-dir = "src"

[tool.pytest.ini_options]
addopts = "--cov --cov-report html:doc/ --cov-report term-missing"

[tool.coverage.run]
source = ["src"]

[tool.pylint]
max-line-length = 120
disable = [
    "C0103", # (invalid-name)
    #    "C0114", # (missing-module-docstring)
    #    "C0115", # (missing-class-docstring)
    #    "C0116", # (missing-function-docstring)
    #    "R0903", # (too-few-public-methods)
    #    "R0913", # (too-many-arguments)
    #    "W0105", # (pointless-string-statement)
]

[tool.isort]
multi_line_output = 8
