[build-system]
requires = ["setuptools >= 61.0.0",
    "wheel",
    "build",
    "sphinx"]

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "damast"
version = "0.1"
description = "Package to improve the development of transparent, replicable data processing pipelines"
license = { file="LICENSE" }
readme = "README.md"
keywords = ["data processing", "pipeline", "machine learning"]
authors = [
    { name = "Pierre Bernabé", email = "pierbernabe@simula.no" },
    { name = "Jørgen S. Dokken", email = "dokken@simula.no" },
    { name = "Anne Fouilloux", email = "annef@simula.no" },
    { name = "Thomas Roehr", email = "roehr@simula.no" }
]
requires-python = ">=3.10"

maintainers = [
    { name = "Jørgen S. Dokken", email = "dokken@simula.no" },
    { name = "Anne Fouilloux", email = "annef@simula.no" },
    { name = "Thomas Roehr", email = "roehr@simula.no" }
]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
]

dependencies = [
    "astropy",
    "cloudpickle",
    "keras>=3.0",
    "matplotlib",
    "numba",
    "numpy",
    "polars",
    "psutil",
    "pyais",
    "pyarrow",
    "pydantic",
    "scikit-learn",
    "tables",
    # BEGIN keras backends
    "jax[cpu]",
    "tf-nightly",
    "torch",
    # END backends
]

[project.urls]
homepage = "https://simula.github.io/damast"
documentation = "https://simula.github.io/damast"
repository = "https://github.com/simula/damast"

#[project.entry-points]

[project.optional-dependencies]
dev = [
    "astroid<3",
    "flake8-gl-codeclimate",
    "isort",
    "jupyter-book",
    "pre-commit",
    "pydot",
    "sphinx-autoapi",
    "tox"
]

cuda = [
    "cudf",
    "polars[gpu]"
]

test = [
    "coverage",
    "pandas",
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "pydot",
    "tox"
]

[project.scripts]
damast = "damast.cli.main:run"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
# Disable to be able to debug in IDE
#addopts = "--cov --cov-report html:doc/ --cov-report term-missing"

[tool.coverage.run]
source = ["src"]

[tool.pylint]
max-line-length = 120
disable = [
    "C0103", # (invalid-name)
    #    "C0114", # (missing-module-docstring)
    #    "C0115", # (missing-class-docstring)
    #    "C0116", # (missing-function-docstring)
    #    "R0903", # (too-few-public-methods)
    #    "R0913", # (too-many-arguments)
    #    "W0105", # (pointless-string-statement)
]

[tool.isort]
multi_line_output = 8
