[build-system]
requires = ["setuptools >= 61.0.0",
    "wheel",
    "build",
    "sphinx"]

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "damast"
dynamic = ["version"]
description = "Package to improve the development of transparent, replicable data processing pipelines"
license = { file="LICENSE" }
readme = "README.md"
keywords = ["data processing", "pipeline", "machine learning"]
authors = [
    { name = "Thomas Roehr", email = "roehr@simula.no" },
    { name = "Jørgen S. Dokken", email = "dokken@simula.no" },
    { name = "Anne Fouilloux", email = "annef@simula.no" },
    { name = "Pierre Bernabé", email = "pierbernabe@simula.no" }
]
requires-python = ">=3.10"

maintainers = [
    { name = "Thomas Roehr", email = "roehr@simula.no" },
    { name = "Jørgen S. Dokken", email = "dokken@simula.no" },
    { name = "Anne Fouilloux", email = "annef@simula.no" }
]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
]

dependencies = [
    "astropy",
    "cloudpickle",
    "keras>=3.0",
    "matplotlib",
    "numba",
    "numpy>=2",
    "polars>=1.20",
    "psutil",
    "pyais",
    "pyarrow",
    "pydantic>=2.0",
    "ratarmount",
    "scikit-learn",
    "tables",
    # BEGIN keras backends
    "torch",
    "tqdm",
    # END backends
]

[project.urls]
homepage = "https://simula.github.io/damast"
documentation = "https://simula.github.io/damast"
repository = "https://github.com/simula/damast"

#[project.entry-points]

[project.optional-dependencies]
dev = [
    "astroid<3",
    "flake8-gl-codeclimate",
    "isort",
    "jupyter-book",
    "pre-commit",
    "pydot",
    # With sphinx-autoapi NamedTuple is not
    # parse correctly
    "sphinx-autoapi<=3.3",
    "tox"
]

ml = [
    "jax[cpu]",
    "tensorflow"
]

cuda = [
    "cudf",
    "polars[gpu]"
]

test = [
    "coverage",
    "pandas>=2",
    "pytest",
    "pytest-console-scripts",
    "pytest-cov",
    "pytest-timeout",
    "pydot",
    "tox"
]

[project.scripts]
damast = "damast.cli.main:run"

[tool.setuptools.dynamic]
version = {attr = "damast.version.__version__"}

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
# Disable to be able to debug in IDE
#addopts = "--cov --cov-report html:doc/ --cov-report term-missing"

[tool.coverage.run]
source = ["src"]

[tool.pylint]
max-line-length = 120
disable = [
    "C0103", # (invalid-name)
    #    "C0114", # (missing-module-docstring)
    #    "C0115", # (missing-class-docstring)
    #    "C0116", # (missing-function-docstring)
    #    "R0903", # (too-few-public-methods)
    #    "R0913", # (too-many-arguments)
    #    "W0105", # (pointless-string-statement)
]

[tool.isort]
multi_line_output = 8
